# python-card-framework

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
card_framework/: __init__.py  __init_test.py
card_framework/v2/: __init__.py  action_response.py  action_response_test.py  action_status.py  annotation.py  annotation_test.py  attachment.py  card.py  card_action.py  card_fixed_footer.py  card_header.py  card_header_test.py  card_test.py  dialog_action.py  emoji.py  enums.py  message.py  message_test.py  section.py  section_test.py  space.py  user.py  widget.py  widget_test.py
card_framework/v2/widgets/: __init__.py  action.py  button.py  button_list.py  button_test.py  chip_list.py  chip_list_test.py  color.py  color_test.py  columns.py  columns_test.py  date_time_picker.py  date_time_picker_test.py  decorated_text.py  divider.py  divider_test.py  grid.py  icon.py  icon_test.py  image.py  image_test.py  on_click.py  on_click_test.py  open_link.py  overflow_menu.py  selection_input.py  selection_input_test.py  selection_item.py  suggestions.py  switch_control.py  text_input.py  text_input_test.py  text_paragraph.py  text_paragraph_test.py
